# OpenAssetIO

./: .clang-tidy  CMakeLists.txt
.github/workflows/: code-quality.yml
cmake/: DefaultTargetProperties.cmake
python/openassetio/managerAPI/: ManagerInterface.py
resources/examples/demotool/: demohost.py  demomanager.py  main.py
src/openassetio-core-c/: CMakeLists.txt
src/openassetio-core-c/include/openassetio/c/: SimpleMap.h  SimpleString.h  errors.h  namespace.h
src/openassetio-core-c/include/openassetio/c/managerAPI/: ManagerInterface.h
src/openassetio-core-c/private/: SimpleMap.cpp
src/openassetio-core-c/private/managerAPI/: CManagerInterface.cpp  CManagerInterface.hpp
src/openassetio-core/include/openassetio/: SimpleMap.hpp  typedefs.hpp
src/openassetio-core/include/openassetio/managerAPI/: ManagerInterface.hpp
src/openassetio-core/trait/: BlobTrait.cpp
src/openassetio-python/: CMakeLists.txt
src/openassetio-python/managerAPI/: ManagerInterfaceBinding.cpp
src/openassetio-python/trait/: BlobTraitBinding.cpp
tests/: CMakeLists.txt
tests/openassetio-core-c/: CMakeLists.txt
tests/openassetio-core-c/managerAPI/: CManagerInterfaceTest.cpp
tests/openassetio-core-c/private/: errorsTest.cpp  simpleMapTest.cpp
tests/openassetio-core-c/private/managerAPI/: CManagerInterfaceTest.cpp
